deploy/testing/trashmongo.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  serviceName: "mongo"
  replicas: 3
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:4.4
        command: ["/usr/bin/mongod", "--bind_ip_all", "--replSet", "dbrs"]
        ports:
        - containerPort: 27017
      volumes:
      - name: mongo-scripts
        emptyDir: {}
